Make AOT-friendly by cutting down the logging code

--- a/uhttpsharp.Tests/uhttpsharp.Tests.csproj
+++ b/uhttpsharp.Tests/uhttpsharp.Tests.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2;net461</TargetFrameworks>
     <AssemblyTitle>µHttpSharp Tests</AssemblyTitle>
   </PropertyGroup>
 
